# SDL2_Libs_CI

./: .gitmodules  CMakeLists.txt
SDL2_gfx/: CMakeLists.txt
